--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -37,28 +37,57 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    var bornIn1500s = inventors.filter(item => (item.year >= 1500) && (item.year < 1600));
+    console.table(bornIn1500s);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    var names = inventors.map(item => item.first + ' ' + item.last);
+    console.table(names);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    inventors.sort(function(a,b){return (a.year - b.year)});
+    console.table(inventors);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    let sumYears = inventors.reduce((sum, current) => sum + (current.passed - current.year), 0);
+    console.log(sumYears);
 
     // 5. Sort the inventors by years lived
+    // redo
+    inventors.sort(function(a, b){return((b.passed - b.year) - (a.passed - a.year))});
+    console.table(inventors);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+    // let section = document.querySelector('.mw-category');
+    // let links = Array.from(section.querySelectorAll('a'));
+    // let containDe = links
+    //                 .map(link => link.textContent)
+    //                 .filter(streetName => streetName.includes('de'));
 
+    // console.log(containDe);
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    people.sort();
+    console.log('7. Sort people alphabetically by last name:', people);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    let counted = data.reduce(function(allStrings, string){
+      if (string in allStrings) {
+        allStrings[string]++
+      } else {
+        allStrings[string] = 1
+      }
+      return allStrings
+    }, {})
+
+    console.log('8. Sum up the instances of each of these', counted);
 
   </script>
 </body>
