--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -27,14 +27,26 @@
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
     // Array.prototype.every() // is everyone 19 or older?
+    let currentYear = new Date().getFullYear();
+
+    let resultSome = people.some(person => (currentYear - person.year) > 19);
+    console.log(resultSome);
+
+    let resultEvery = people.every(person => (currentYear - person.year) > 19);
+    console.log(resultEvery);
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    let found = comments.find(comment => comment.id === 823423);
+    console.log(found.text);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    let findIndex = comments.findIndex(comment => comment.id === 823423);
+    comments.splice(findIndex, 1);
+    console.log(comments);
 
   </script>
 </body>
